# cmd-yahtzee

./: .gitignore  README.md
Yatzy-app/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
Yatzy-app/dokumentaatio/: arkkitehtuuri.MD  kayttoohje.md  testaus.MD  tyoaikakirjanpito.MD  vaatimusmaarittely.MD
Yatzy-app/src/: .coverage  dice.py  main.py  player.py  scorelogic.py  ui.py
Yatzy-app/src/tests/: dice_test.py  player_test.py  scorelogic_test.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
