[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["JVS23 <juhosiren23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
